--- a/Header.css
+++ b/Header.css
@@ -3981,6 +3981,13 @@ nav {
   color: #99d052 !important;
 }
 
+.mobile-nav-link #cart-count-mobile {
+  background-color: transparent !important;
+  color: #038CC3 !important;
+  font-weight: bold !important;
+  font-size: 14px !important;
+}
+
 .mobile-nav-link .badge {
   position: absolute !important;
   top: 0 !important;
