--- a/asset/style/product-card.css
+++ b/asset/style/product-card.css
@@ -166,6 +166,7 @@
     /* height: 32px !important; */
     display: -webkit-box !important;
     -webkit-line-clamp: 2 !important;
+    line-clamp: 2 !important;
     -webkit-box-orient: vertical !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
@@ -351,11 +352,9 @@
     display: inline-flex !important;
     align-items: center !important;
     justify-content: center !important;
-    font-size: 11px !important;
-    /* Reduced from 14px */
-    margin-right: 4px !important;
+    font-size: 18px !important;
+    margin-right: 6px !important;
     transform: scaleX(-1);
-    /* Mirror icon as per design */
 }
 
 /* Quantity Control Container */
